Small dark mode style fix

--- a/src/components/ConfigDropdown.scss
+++ b/src/components/ConfigDropdown.scss
@@ -3,12 +3,14 @@
 }
 
 .dropdown-menu {
-  box-shadow: 1px 1px 4px 0px rgba(0,0,0,0.2);
+  box-shadow: 1px 1px 4px 0px rgba(0, 0, 0, 0.2);
 }
 
 .dropdown-item {
-  &:active, &:hover {
-    color: black;
+
+  &:active,
+  &:hover {
+    color: inherit;
     background: none;
   }
 
